# HaskellForMaths

./: .gitignore  HaskellForMaths.cabal  README.md  license.txt  stack.yaml
app/: Main.hs
src/Math/Algebra/: LinearAlgebra.hs
src/Math/Algebra/Field/: Base.hs  Extension.hs
src/Math/Algebra/Group/: PermutationGroup.hs  SchreierSims.hs  StringRewriting.hs
src/Math/Algebra/NonCommutative/: GSBasis.hs  NCPoly.hs  TensorAlgebra.hs
src/Math/Algebras/: AffinePlane.hs  Commutative.hs  GroupAlgebra.hs  LaurentPoly.hs  Matrix.hs  NonCommutative.hs  Octonions.hs  Quaternions.hs  Structures.hs  TensorAlgebra.hs  TensorProduct.hs  VectorSpace.hs
src/Math/Combinatorics/: CombinatorialHopfAlgebra.hs  Design.hs  Digraph.hs  FiniteGeometry.hs  Graph.hs  GraphAuts.hs  Hypergraph.hs  IncidenceAlgebra.hs  Matroid.hs  Poset.hs  StronglyRegularGraph.hs
src/Math/Common/: IntegerAsType.hs  ListSet.hs
src/Math/CommutativeAlgebra/: Polynomial.hs
src/Math/Core/: Field.hs  Utils.hs
src/Math/NumberTheory/: Factor.hs  Prime.hs  QuadraticField.hs
src/Math/Projects/: MiniquaternionGeometry.hs  RootSystem.hs  Rubik.hs
src/Math/Projects/ChevalleyGroup/: Classical.hs  Exceptional.hs
src/Math/Projects/KnotTheory/: Braid.hs  IwahoriHecke.hs  LaurentMPoly.hs  TemperleyLieb.hs
src/Math/QuantumAlgebra/: OrientedTangle.hs  QuantumPlane.hs  Tangle.hs  TensorCategory.hs
test/Math/Test/: TDesign.hs  TField.hs  TFiniteGeometry.hs  TGraph.hs  TNonCommutativeAlgebra.hs  TPermutationGroup.hs  TestAll.hs
test/Math/Test/TAlgebras/: TOctonions.hs  TStructures.hs  TTensorProduct.hs  TVectorSpace.hs
test/Math/Test/TCombinatorics/: TGraphAuts.hs
test/Math/Test/TNumberTheory/: TPrimeFactor.hs
